--- a/main.html
+++ b/main.html
@@ -494,7 +494,7 @@ justify-content: center;
 <!-- NAVBAR -->
 <div class="navbar">
   <a href="https://www.nvidia.com/en-gb/" target="_blank">
-    <img src="https://raw.githubusercontent.com/raducumihaiii/licenta-nvidiaframebase/refs/heads/main/logo-header.png" alt="NVIDIA Logo">
+    <img src="https://raw.githubusercontent.com/raducumihaiii/licenta-nvidiaframebase/main/icons/navbar-nvidia.png" alt="NVIDIA Logo">
   </a>
   <div class="navbar-icons">
     <div class="navbar-icon" id="lang-toggle">
@@ -792,9 +792,9 @@ justify-content: center;
   
   function getGameImage(gameName) {
   const images = {
-    "Cyberpunk 2077": "https://raw.githubusercontent.com/raducumihaiii/licenta-nvidiaframebase/refs/heads/main/cyberpunk.jpg",
+    "Cyberpunk 2077": "https://raw.githubusercontent.com/raducumihaiii/licenta-nvidiaframebase/main/icons/icon-cyberpunk.jpg",
   
-    "Hogwarts Legacy": "https://raw.githubusercontent.com/raducumihaiii/licenta-nvidiaframebase/refs/heads/main/icon_hogwartslegacy.avif"
+    "Hogwarts Legacy": "https://raw.githubusercontent.com/raducumihaiii/licenta-nvidiaframebase/main/icons/icon_hogwartslegacy.png"
   };
   return images[gameName] || "";
 }
